--- a/packages/common/src/styles/_variables-theme-material.scss
+++ b/packages/common/src/styles/_variables-theme-material.scss
@@ -88,12 +88,16 @@ $slick-pagination-page-input-border-radius:                 3px !default;
 
 // Dark Mode
 // -----------
+$slick-dark-primary-color:                                #66bb6a;
+$slick-dark-base-dark-menu-bg-color:                      #212121;
+$slick-dark-highlight-color:                              $slick-dark-primary-color;
+$slick-dark-text-color:                                   #d4d4d4;
+
 .ms-dark-mode,
 .ms-drop.ms-dark-mode,
 .slick-dark-mode .ms-dark-mode,
 .slick-dark-mode .icon-checkbox-container,
 .slick-dark-mode {
-  --slick-primary-color:                          #66bb6a;
   --slick-base-dark-menu-bg-color:                #212121;
   --slick-button-primary-bg-color:                #66bb6a;
   --slick-cell-box-shadow:                        none;
