--- a/packages/common/src/styles/_variables-theme-salesforce.scss
+++ b/packages/common/src/styles/_variables-theme-salesforce.scss
@@ -124,12 +124,14 @@ $slick-pagination-page-input-border-radius:                   3px !default;
 
 // Dark Mode
 // -----------
+$slick-dark-primary-color:                                #66b8ff;
+$slick-dark-base-dark-menu-bg-color:                      #212121;
+
 .ms-dark-mode,
 .ms-drop.ms-dark-mode,
 .slick-dark-mode .ms-dark-mode,
 .slick-dark-mode .icon-checkbox-container,
 .slick-dark-mode {
-  --slick-primary-color:                    #66b8ff;
   --ms-checkbox-color:                      #66b8ff;
   --ms-ok-button-text-color:                #66b8ff;
   --slick-button-primary-bg-color:          #0064c9;
@@ -138,7 +140,6 @@ $slick-pagination-page-input-border-radius:                   3px !default;
   --slick-cell-active-box-shadow:           inset 0 0 0 1px #3ca4ff;
   --slick-cell-box-shadow: 0px 1px 0px      #303030, 0px -1px 0px #303030;
   --slick-checkbox-icon-container-bg-color: #2d2d2d;
-  --slick-highlight-color:                  #3ca4ff;
   --slick-column-picker-icon-color:         #66b8ff;
   --slick-checkbox-icon-color:              #66b8ff;
   --slick-checkbox-icon-border:             1px solid #5e5e5e;
